--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "next": "^13.4.17-canary.2",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
