--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.14.3",
-    "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
+    "@types/node": "^20.4.6",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "babel-plugin-styled-components": "^2.1.4",
@@ -27,7 +27,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
-    "typescript": "5.1.6",
+    "typescript": "^5.1.6",
     "yarn": "^1.22.19"
   }
 }
